--- a/notebooks/sql_demo.ipynb
+++ b/notebooks/sql_demo.ipynb
@@ -93,6 +93,17 @@
     {
       "cell_type": "code",
       "source": [
+        "! pip install qcfractal==0.15.8.1"
+      ],
+      "metadata": {
+        "id": "9L7T29WWh1Bc"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#from qcfractal.storage_sockets.models.sql_base import Base\n",
         "from qcfractal.socket.models.sql_base import Base"
       ],
