--- a/notebooks/sql_demo.ipynb
+++ b/notebooks/sql_demo.ipynb
@@ -60,8 +60,10 @@
         "! pip install pymatgen  # Install Pymatgen for Gaussian file parsing\n",
         "! pip install pubchempy  # Install PubChem python API for moleucle information\n",
         "! pip install rdkit-pypi  # Install RdKit for molecule transformations\n",
-        "! pip install qcfractal # Install QCFractal for SQL schema\n",
-        "! pip install sqlalchemy # Install SQLAlchemy for SQL database"
+        "! pip install qcfractal==0.15.8.1 # Install QCFractal for SQL schema (Camille added specific version)\n",
+        "! pip install sqlalchemy # Install SQLAlchemy for SQL database\n",
+        "#! pip install pandas==1.4.4 # added by Camille; needed to run due to upgrades; tried 2.1.4 (unsuccessful)\n",
+        "! pip install pydantic==1.10.0"
       ]
     },
     {
@@ -80,9 +82,9 @@
       "cell_type": "code",
       "source": [
         "#me\n",
-        "!pip uninstall numpy\n",
+        "# !pip uninstall numpy\n",
         "\n",
-        "!pip install numpy==1.26.4"
+        "# !pip install numpy==1.26.4"
       ],
       "metadata": {
         "id": "W-C1ey8LqtgO"
@@ -93,67 +95,11 @@
     {
       "cell_type": "code",
       "source": [
-        "! pip install qcfractal==0.15.8.1"
-      ],
-      "metadata": {
-        "id": "9L7T29WWh1Bc"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#from qcfractal.storage_sockets.models.sql_base import Base\n",
-        "from qcfractal.socket.models.sql_base import Base"
+        "#this tests that our qcfractal and pydantic installs solve a problem that arises in the 2025 versions of the packages\n",
+        "from qcfractal.storage_sockets.models.sql_base import Base"
       ],
       "metadata": {
         "id": "fjxWAAqY_den"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#pip show sqlalchemy"
-      ],
-      "metadata": {
-        "id": "RsX9ggCOENEq"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#pip show qcfractal"
-      ],
-      "metadata": {
-        "id": "LU9W3kopEYv7"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#me\n",
-        "#! pip install sqlalchemy==2.0.*"
-      ],
-      "metadata": {
-        "id": "T9qfSVnXEFGs"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import pandas as pd"
-      ],
-      "metadata": {
-        "id": "OcP13oSF-z13"
       },
       "execution_count": null,
       "outputs": []
@@ -181,52 +127,7 @@
     {
       "cell_type": "code",
       "source": [
-        "from qcfractal.storage_sockets.models.sql_base import Base"
-      ],
-      "metadata": {
-        "id": "qiimtViDB2kB"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from qcfractal.flask_app.flask_socket import *"
-      ],
-      "metadata": {
-        "id": "eh9EPbOeB2rZ"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "pip show sqlalchemy"
-      ],
-      "metadata": {
-        "id": "_g8G_hUGB2uB"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "! git clone https://github.com/D3TaLES/databases_demo.git # Get Processing code from GitHub\n",
-        "! git grep storage_sockets"
-      ],
-      "metadata": {
-        "id": "nRFPN7kRAdvk"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "conn = sqlite3.connect(':memory:')"
+        "#conn = sqlite3.connect(':memory:')"
       ],
       "metadata": {
         "id": "LAuzYrhRV3wO"
@@ -504,6 +405,18 @@
       "metadata": {
         "id": "fxMz6hs00oRg"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#pip show pandas\n",
+        "! pip install pandas==2.1.4"
+      ],
+      "metadata": {
+        "id": "7_-uDCm5nHuy"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
