--- a/notebooks/sql_demo.ipynb
+++ b/notebooks/sql_demo.ipynb
@@ -68,6 +68,54 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "#! pip install pandas==1.4.4 # added by Camille; needed to run due to upgrades; tried 2.1.4 (unsuccessful)\n",
+        "#! pip install pydantic==1.10.0"
+      ],
+      "metadata": {
+        "collapsed": true,
+        "id": "wayUHp5Dp5xn"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pip show numpy"
+      ],
+      "metadata": {
+        "collapsed": true,
+        "id": "BttCdr2mqSff"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pip show pandas"
+      ],
+      "metadata": {
+        "collapsed": true,
+        "id": "WcKFuIeZqVUu"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "! pip install pandas==1.5.0"
+      ],
+      "metadata": {
+        "id": "hWDqkpmqsbY0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "miN41ShFFnD1"
@@ -230,19 +278,51 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "#! pip install pandas==1.5.0"
+      ],
+      "metadata": {
+        "id": "vUMDz6aaqm6O"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "8ZfzR4JKoGnZ"
       },
       "outputs": [],
       "source": [
+        "session.rollback() # Add rollback to clear previous transaction errors\n",
+        "\n",
+        "# Clean all tables!\n",
+        "MetaData(bind=engine).drop_all(tables=[\n",
+        "                                         Molecules.__table__,\n",
+        "                                         DftData.__table__,\n",
+        "                                         Synonyms.__table__,\n",
+        "                                         UvVisData.__table__,\n",
+        "                                         AbsorbanceData.__table__\n",
+        "                                         ])\n",
+        "\n",
+        "# Create tables\n",
+        "MetaData(bind=engine).create_all(tables=[\n",
+        "                                         Molecules.__table__,\n",
+        "                                         DftData.__table__,\n",
+        "                                         Synonyms.__table__,\n",
+        "                                         UvVisData.__table__,\n",
+        "                                         AbsorbanceData.__table__\n",
+        "                                         ])\n",
+        "\n",
+        "\n",
         "# LOAD single molecule object to the Molecules table\n",
         "session.add(Molecules(**mol_data))\n",
         "session.commit()\n",
         "\n",
         "# LOAD multiple synonym objects to the Synonym table\n",
         "session.bulk_save_objects(synonym_data)\n",
-        "session.commit()\n"
+        "session.commit()"
       ]
     },
     {
@@ -410,7 +490,7 @@
       "cell_type": "code",
       "source": [
         "#pip show pandas\n",
-        "! pip install pandas==2.1.4"
+        "#! pip install pandas==2.1.4"
       ],
       "metadata": {
         "id": "7_-uDCm5nHuy"
@@ -427,14 +507,15 @@
       "outputs": [],
       "source": [
         "# View Molecules data table\n",
-        "pd.read_sql(\"molecules\", engine.connect())"
+        "pd.read_sql(\"SELECT * FROM molecules\", engine.connect())"
       ]
     },
     {
       "cell_type": "code",
       "source": [
         "# View UV-Vis data table\n",
-        "pd.read_sql(\"uvvis_data\", engine.connect())"
+        "#pd.read_sql(\"uvvis_data\", engine.connect())\n",
+        "pd.read_sql(\"SELECT * FROM uvvis_data\", engine.connect())"
       ],
       "metadata": {
         "id": "jw7IbdXPAHgE"
@@ -446,7 +527,7 @@
       "cell_type": "code",
       "source": [
         "# View DFT data table\n",
-        "pd.read_sql(\"dft_data\", engine.connect())"
+        "pd.read_sql(\"SELECT * FROM dft_data\", engine.connect())"
       ],
       "metadata": {
         "id": "8W8rJ-rhFx30"
