Final version - working and clean - for use with MSE7530

--- a/notebooks/sql_demo.ipynb
+++ b/notebooks/sql_demo.ipynb
@@ -62,54 +62,18 @@
         "! pip install rdkit-pypi  # Install RdKit for molecule transformations\n",
         "! pip install qcfractal==0.15.8.1 # Install QCFractal for SQL schema (Camille added specific version)\n",
         "! pip install sqlalchemy # Install SQLAlchemy for SQL database\n",
-        "#! pip install pandas==1.4.4 # added by Camille; needed to run due to upgrades; tried 2.1.4 (unsuccessful)\n",
+        "! pip install pandas==1.5.0\n",
         "! pip install pydantic==1.10.0"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "#! pip install pandas==1.4.4 # added by Camille; needed to run due to upgrades; tried 2.1.4 (unsuccessful)\n",
-        "#! pip install pydantic==1.10.0"
+        "!pip uninstall numpy\n",
+        "!pip install numpy==1.26.4"
       ],
       "metadata": {
-        "collapsed": true,
-        "id": "wayUHp5Dp5xn"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "pip show numpy"
-      ],
-      "metadata": {
-        "collapsed": true,
-        "id": "BttCdr2mqSff"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "pip show pandas"
-      ],
-      "metadata": {
-        "collapsed": true,
-        "id": "WcKFuIeZqVUu"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "! pip install pandas==1.5.0"
-      ],
-      "metadata": {
-        "id": "hWDqkpmqsbY0"
+        "id": "7ZgrqhRZvyFP"
       },
       "execution_count": null,
       "outputs": []
@@ -125,32 +89,6 @@
         "! rm -r databases_demo/ # Remove database_demo directory if it already exists\n",
         "! git clone https://github.com/D3TaLES/databases_demo.git # Get Processing code from GitHub"
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#me\n",
-        "# !pip uninstall numpy\n",
-        "\n",
-        "# !pip install numpy==1.26.4"
-      ],
-      "metadata": {
-        "id": "W-C1ey8LqtgO"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#this tests that our qcfractal and pydantic installs solve a problem that arises in the 2025 versions of the packages\n",
-        "from qcfractal.storage_sockets.models.sql_base import Base"
-      ],
-      "metadata": {
-        "id": "fjxWAAqY_den"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -171,17 +109,6 @@
         "from databases_demo.file_parser import *\n",
         "from databases_demo.schema.sql_schema import *"
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#conn = sqlite3.connect(':memory:')"
-      ],
-      "metadata": {
-        "id": "LAuzYrhRV3wO"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -277,9 +204,36 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### (Added by Camille) If the cell below this one doesn't work, uncomment this cell and run it"
+      ],
+      "metadata": {
+        "id": "1d4VlADlwQ69"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "#! pip install pandas==1.5.0"
+        "# session.rollback() # Add rollback to clear previous transaction errors\n",
+        "\n",
+        "# # Clean all tables!\n",
+        "# MetaData(bind=engine).drop_all(tables=[\n",
+        "#                                          Molecules.__table__,\n",
+        "#                                          DftData.__table__,\n",
+        "#                                          Synonyms.__table__,\n",
+        "#                                          UvVisData.__table__,\n",
+        "#                                          AbsorbanceData.__table__\n",
+        "#                                          ])\n",
+        "\n",
+        "# # Create tables\n",
+        "# MetaData(bind=engine).create_all(tables=[\n",
+        "#                                          Molecules.__table__,\n",
+        "#                                          DftData.__table__,\n",
+        "#                                          Synonyms.__table__,\n",
+        "#                                          UvVisData.__table__,\n",
+        "#                                          AbsorbanceData.__table__\n",
+        "#                                          ])"
       ],
       "metadata": {
         "id": "vUMDz6aaqm6O"
@@ -295,27 +249,6 @@
       },
       "outputs": [],
       "source": [
-        "session.rollback() # Add rollback to clear previous transaction errors\n",
-        "\n",
-        "# Clean all tables!\n",
-        "MetaData(bind=engine).drop_all(tables=[\n",
-        "                                         Molecules.__table__,\n",
-        "                                         DftData.__table__,\n",
-        "                                         Synonyms.__table__,\n",
-        "                                         UvVisData.__table__,\n",
-        "                                         AbsorbanceData.__table__\n",
-        "                                         ])\n",
-        "\n",
-        "# Create tables\n",
-        "MetaData(bind=engine).create_all(tables=[\n",
-        "                                         Molecules.__table__,\n",
-        "                                         DftData.__table__,\n",
-        "                                         Synonyms.__table__,\n",
-        "                                         UvVisData.__table__,\n",
-        "                                         AbsorbanceData.__table__\n",
-        "                                         ])\n",
-        "\n",
-        "\n",
         "# LOAD single molecule object to the Molecules table\n",
         "session.add(Molecules(**mol_data))\n",
         "session.commit()\n",
@@ -485,18 +418,6 @@
       "metadata": {
         "id": "fxMz6hs00oRg"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#pip show pandas\n",
-        "#! pip install pandas==2.1.4"
-      ],
-      "metadata": {
-        "id": "7_-uDCm5nHuy"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -746,6 +667,15 @@
       ],
       "metadata": {
         "id": "xjT17pLj9Saq"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "WsMSzZaAwKsH"
       },
       "execution_count": null,
       "outputs": []
