--- a/notebooks/no_sql_demo.ipynb
+++ b/notebooks/no_sql_demo.ipynb
@@ -58,8 +58,7 @@
       },
       "outputs": [],
       "source": [
-        "%%capture\n",
-        "! apt install mongodb > log  # Install the No-SQL database arcitecture MongoDB\n",
+        "! apt install mongodb  # Install the No-SQL database arcitecture MongoDB\n",
         "! service mongodb start  # Start MongoDB\n",
         "! pip install pymatgen  # Install Pymatgen for Gaussian file parsing\n",
         "! pip install pubchempy  # Install PubChem python API for moleucle information\n",
@@ -82,8 +81,8 @@
       "cell_type": "code",
       "source": [
         "#me\n",
-        "!pip install fiftyone\n",
-        "!pip install fiftyone-db-ubuntu2204"
+        "# !pip install fiftyone\n",
+        "# !pip install fiftyone-db-ubuntu2204"
       ],
       "metadata": {
         "id": "zB4a-JRBn2dJ"
@@ -94,9 +93,9 @@
     {
       "cell_type": "code",
       "source": [
-        "!pip uninstall numpy\n",
+        "# !pip uninstall numpy\n",
         "\n",
-        "!pip install numpy==1.26.4"
+        "# !pip install numpy==1.26.4"
       ],
       "metadata": {
         "id": "r7S6ubQ1kotd"
@@ -117,6 +116,17 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "!pip install rdkit"
+      ],
+      "metadata": {
+        "id": "9gIr-fsFeLJQ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "hjisDzzhEQgo"
@@ -130,7 +140,7 @@
         "from pymongo import MongoClient\n",
         "from jsonschema import validate\n",
         "from databases_demo.file_parser import *\n",
-        "import fiftyone"
+        "#import fiftyone"
       ]
     },
     {
@@ -245,6 +255,64 @@
         "# LOAD molecule into database\n",
         "db[\"molecules\"].insert_one(mol_data)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "b0ae5b80"
+      },
+      "source": [
+        "# Add MongoDB repository\n",
+        "!wget -qO - https://www.mongodb.org/static/pgp/server-6.0.asc | sudo apt-key add -\n",
+        "!echo \"deb [ arch=amd64,arm64 ] https://repo.mongodb.org/apt/ubuntu focal/mongodb-org/6.0 multiverse\" | sudo tee /etc/apt/sources.list.d/mongodb-org-6.0.list\n",
+        "\n",
+        "# Update apt lists\n",
+        "!sudo apt-get update\n",
+        "\n",
+        "# Install MongoDB\n",
+        "!sudo apt-get install -y mongodb-org\n",
+        "\n",
+        "# Start MongoDB service\n",
+        "!sudo systemctl start mongod\n",
+        "\n",
+        "# Check service status\n",
+        "!sudo systemctl status mongod"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "a6be9c4f"
+      },
+      "source": [
+        "!which mongod"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "e8c7ebfa"
+      },
+      "source": [
+        "!mongod --fork --logpath /var/log/mongodb.log --dbpath /data/db"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7f395911"
+      },
+      "source": [
+        "!service mongodb status"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
