ensured credit was given to source paper

--- a/notebooks/sql_demo.ipynb
+++ b/notebooks/sql_demo.ipynb
@@ -23,6 +23,8 @@
       "cell_type": "markdown",
       "source": [
         "# Demonstration of an SQL Database\n",
+        "Included with R. Duke et. al. Chem. Sci. 2022 (https://doi.org/10.1039/D2SC05142G). Imports modified by C. Bishop due to some incompatibilities with 2025 updates to packages.\n",
+        "\n",
         "In this notebook, we demonstrate a SQL database. The SQL database structure is the original data management structure. It contains collections of two-dimensional tables, akin to collections of spreadsheets pages. The table rows are data records, and columns are attributes. Each attribute (column) can contain only a single numerical or text value for each record (row). When a data record has an embedded attribute, an SQL database uses multiple tables. For example, a molecule may contain the attribute `UVVis_Data`; however, `UVVis_Data` contains embedded attributes such as Instrument_Name and Optical_Gap. To accommodate these data, the first table contains the molecule record with its primary key and its regular attributes, while another table contains `UVVis_Data` and its attributes. Each record in `UVVis_Data` connects to the molecules table with a table-joining column. This column contains a molecule primary key.\n",
         "\n",
         "**Note**: This schema is not a complete picture of the schema for the data in this notebook; it is only a partial schema.\n",
