Updated to include PNIPAM data file for Q1, Part B

--- a/Assignments/Assignment7.ipynb
+++ b/Assignments/Assignment7.ipynb
@@ -5,13 +5,10 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [
-        "BSi5C3BGO-je",
-        "d__UEaMlPDC5",
-        "fapEuFMiS_jJ",
-        "WMYAgcWRvcVP"
+        "fapEuFMiS_jJ"
       ],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNDdhXA4TCit1OYzWD5NSIC",
+      "authorship_tag": "ABX9TyNZk+TYN/5s2LjTaTM8VMOb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -403,11 +400,22 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### Part B. For each of the curves that you manually generated in Part A, calculate the mean-squared error (MSE) between your curve and the experimental data contained in the given file, 'PNIPAM_data.txt'."
+        "#### Part B. For each of the curves that you manually generated in Part A, calculate the mean-squared error (MSE) between your curve and the experimental data contained in the given file, 'PNIPAM_q1.txt'"
       ],
       "metadata": {
         "id": "ZUrijIQUw2td"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dataPNI = '/content/MSE7530/sampledata/PNIPAM_q1.txt'"
+      ],
+      "metadata": {
+        "id": "hjzTUA80Z1u9"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
